--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="content_description">Image</string>
     <string name="separator">by</string>
     <string name="content_description_details">Image Detail</string>
+    <string name="all_projects_user">Показать все проекты пользователя</string>
 </resources>
