+1) На экране профиля кнопка, при нажатию на которую происходит переход на экран проектов текущего пользователя - UserProjectsFragment +2) UserProjectsFragment сохраняет стейт при перевороте телефона +3) ProjectsFragment и UserProjectsFragment наследуются от одного базового фрагмента BaseProjectsFragment. +4) ProjectsViewModel и UserProjectsViewModel должны наследуются от одного базового BaseProjectsViewModel +5) При нажатии на элементы списка UserProjectsFragment - ничего не происходит
-6) UserProjectsFragment показывате проекты выбранного пользователя. (Не работает).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="separator">by</string>
     <string name="content_description_details">Image Detail</string>
     <string name="all_projects_user">Показать все проекты пользователя</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
